--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,3 +3,11 @@ $color-secundario: rgb(255, 119, 28);
 $color-terciario: white;
 $color-fondo: rgb(223, 211, 211);
 $color-fondo2: rgba(0, 0, 0, 0.603);
+
+$colores: (
+    "color-prinicpal" : black,
+    "color-secundario": rgb(255, 119, 28),
+    "color-secundarioF": rgba(255, 119, 28, 0.719),
+    "color-terciario" : white,
+    "color-fondo" : rgb(223, 211, 211),
+);
