--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,6 @@
 @import '../base/base';
 @import '../utilities/mixin';
-
-    
+@import '../components/cuestionario';
 
 
 .destacados{
@@ -22,12 +21,8 @@
     ;
     background-position: center center;
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    gap : 1em;
+    @include grids( 4 , 2 , 1em);
+
     article{
         figure{
             background-color: $color-fondo2;
@@ -54,19 +49,23 @@
 .tips-redes{
     background-image: url(https://images.pexels.com/photos/2911545/pexels-photo-2911545.jpeg?cs=srgb&dl=pexels-dids-2911545.jpg&fm=jpg);
     background-position: center center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    
+    @include flexRow (wrap , space-evenly);
+    
     align-items: center;
     .article-redes{
-        display: grid;
-    grid-template-columns : repeat( 2 , 1fr );
-    grid-template-rows : repeat( 2 , 1fr);
-    gap : 1em;
+
+        @include grids ( 2 , 2 , 1em);
+
         .whatsapp{
             display: flex;
             flex-direction: column;
         }
-}
+    }
+    .article-redesF{
+        @include flexRow (wrap , space-evenly);
+        div{
+            margin: 30px;
+        }
+    }
 }
