--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
   background-position: center center; }
   .main-contacto section article form {
     padding: 20px;
-    background-color: black; }
+    background-color: rgba(255, 119, 28, 0.733); }
     .main-contacto section article form .titulo, .main-contacto section article form .labels, .main-contacto section article form .selector, .main-contacto section article form .listaDesplegable, .main-contacto section article form .cuestionario {
       background-color: white;
       display: flex;
@@ -49,14 +49,23 @@
       border-style: solid;
       border-radius: 20px;
       padding-left: 20px; }
-    .main-contacto section article form .cuestionario .enviar, .main-contacto section article form .cuestionario .resetear {
+    .main-contacto section article form .cuestionario .botones .enviar, .main-contacto section article form .cuestionario .botones .resetear {
       background-color: #ff771c;
       color: white;
       padding: 10px;
       border: 1px;
       border-style: solid;
       border-radius: 10px;
-      border-color: rgba(0, 0, 0, 0.603); }
+      border-color: rgba(0, 0, 0, 0.603);
+      margin: 10px; }
+    .main-contacto section article form .cuestionario .checkbox {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 10px; }
+      .main-contacto section article form .cuestionario .checkbox p {
+        margin: 10px; }
 
 .destacados {
   display: flex;
@@ -85,7 +94,12 @@
       flex-wrap: wrap;
       justify-content: center; } }
   .section-imagenes article figure {
-    background-color: rgba(0, 0, 0, 0.603); }
+    background-color: rgba(0, 0, 0, 0.603);
+    width: 100%;
+    transition: all 300ms;
+    position: relative; }
+    .section-imagenes article figure:hover {
+      transform: scale(1.15); }
     .section-imagenes article figure a img {
       max-width: 350px; }
     .section-imagenes article figure figcaption {
