--- a/scss/components/_cuestionario.scss
+++ b/scss/components/_cuestionario.scss
@@ -10,7 +10,7 @@
         article{
             form{
                 padding: 20px;
-                background-color: black;
+                background-color: rgba(255, 119, 28, 0.733);
 
                 .titulo{
                     background-color: white;
@@ -44,19 +44,35 @@
                     @extend .labels;
                 }
                 .cuestionario{
+                    
                     @extend .labels;
-                    .enviar{
-                        background-color: $color-secundario;
-                        color: $color-terciario;
-                        padding: 10px;
-                        border: 1px;
-                        border-style: solid;
-                        border-radius: 10px;
-                        border-color: $color-fondo2;
+                    .botones{
+                        .enviar{
+                            background-color: $color-secundario;
+                            color: $color-terciario;
+                            padding: 10px;
+                            border: 1px;
+                            border-style: solid;
+                            border-radius: 10px;
+                            border-color: $color-fondo2;
+                            margin: 10px;
+                        }
+                        .resetear{
+                            @extend .enviar;
+                        }
                     }
-                    .resetear{
-                        @extend .enviar;
+
+                    .checkbox{
+                        @include flexRow (wrap , center);
+                        margin: 10px;
+                        p{
+                            margin: 10px;
+                        }
+                        input{
+                            @extend .p;
+                        }
                     }
+                    
                 }
                 
             }
