--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -24,25 +24,31 @@
     @include grids( 4 , 2 , 1em);
 
     article{
+        
         figure{
             background-color: $color-fondo2;
+            width: 100%;
+            transition: all 300ms;
+            position: relative;
+            &:hover{
+                transform: scale(1.15);
+            }
             a{
                 img{
-                    max-width: 350px;
+                    max-width: 350px; 
                 }
             }
-            figcaption{
+            figcaption{    
                 text-align: center;
                 color: $color-terciario;
                 font-size: large;
-            }
-            span{
+                }
+                span{
                 margin-left: 140px;
                 color: $color-secundario;
                 font-size: large;
                 font-weight: 900;
-                
-            }
+                }
         }
     }
 }
@@ -51,7 +57,6 @@
     background-position: center center;
     
     @include flexRow (wrap , space-evenly);
-    
     align-items: center;
     .article-redes{
 
