--- a/scss/utilities/_mixin.scss
+++ b/scss/utilities/_mixin.scss
@@ -22,3 +22,8 @@
         @include flexRow(wrap , center )
     }
 }
+@mixin animation ( $width , $position ){
+    width: $width;
+    transition: all 300ms;
+    position: $position;
+}
