--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,6 +11,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         li{
             a{
                 margin: 10px;
