--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,13 +1,22 @@
 @import '../base/base';
 @import '../utilities/mixin';
 @import '../components/cuestionario';
-
+@import '../components/nostros';
 
 .destacados{
     display: flex;
     justify-content: center;
     align-items: center;
     h1{
+        color:$color-prinicpal;
+        font-size: 3rem;
+        font-weight: 900;
+        margin: 20px;
+        @media screen and (max-width: 350px) {
+            font-size: large;
+        }
+    }
+    h2{
         color:$color-prinicpal;
         font-size: 3rem;
         font-weight: 900;
@@ -37,6 +46,17 @@
                 transform: scale(1.15);
             }
             a{
+                .new{
+                    height: 19px;
+                    background: $color-secundario;
+                    padding: 10px 20px;
+                    font-weight: 700;
+                    position: absolute;
+                    top: 0;
+                    right: 10px;
+                    z-index: 1;
+                    color: #FFF;
+                }
                 img{
                     max-width: 350px;
                     @media screen and (max-width: 350px) {
@@ -76,9 +96,14 @@
             flex-direction: column;
         }
     }
-    .article-redesF{
+    .article-redes{
         @include flexRow (wrap , space-evenly);
         div{
+            transition: all 300ms;
+            position: relative;
+            &:hover{
+                transform: scale(1.15);
+            }
             margin: 30px;
         }
     }
