--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -109,11 +109,19 @@
     }
     .article-tips{
         div{
-            .sale{
-                max-width: 500px;
-                @media screen and (max-width:550px) {
-                    max-width: 250px;
-                    margin-bottom: 30px;
+            transition: all 300ms;
+            position: relative;
+            &:hover{
+                transform: scale(1.15);
+            }
+            margin: 30px;
+            a{
+                text-decoration: none;
+                p{
+                    color:$color-prinicpal;
+                    font-size: 3rem;
+                    font-weight: 900;
+                    margin: 20px;
                 }
             }
         }
