--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -2,6 +2,7 @@
 @import '../utilities/mixin';
 @import '../components/cuestionario';
 @import '../components/nostros';
+@import '../components/prendas';
 
 .destacados{
     display: flex;
